--- a/templates/post.j2
+++ b/templates/post.j2
@@ -33,8 +33,12 @@
         {% endif %}
         <h3><a href="{{ series.url() }}">{{ title(series) }} <img src="/images/rss_icon_small.png" /></a></h3>
         <ul class=list>
-        {% for series_member in series.values()|sortbundles('title') %}
-            <li><a href="{{ series_member.url() }}">{{ title(series_member) }}</a></li>
+        {% for series_member in series.values()|sortbundles('series-part,publish_time') %}
+            {% if series_member.meta.status == "published" %}
+                <li><a href="{{ series_member.url() }}">{{ title(series_member) }}</a></li>
+            {% elif series_member.meta.status == "planned" %}
+                <li>{{ title(series_member) }}</li>
+            {% endif %}
         {% endfor %}
         </ul>
     {% endfor %}
@@ -79,8 +83,8 @@
     {% set series = bundle.get_collection('series') %}
     {% if series %}
         <div>
-            <h3>Part of an on-going series "{{ title(series) }}"</h3>
-            <p>Do you want to <a href="{{ series.url() }}">read more about this</a>?</p>
+            <h4>Part of a series "{{ title(series) }}"</h4>
+            <p><a href="{{ series.url() }}">Read more entries or follow for updates.</a></p>
         </div>
     {% endif %}
 
