--- a/templates/post.j2
+++ b/templates/post.j2
@@ -1,7 +1,7 @@
 {% extends "site_base.j2" %}
 
 {% block header_right %}
-    {% set series = bundle.get_collection('series') %}
+    {% set series = plugins.collections.get_collection(bundle, 'series') %}
     {% if series and title(series) %}
         <em>Part of "{{ title(series) }}"</em>
     {% endif %}
@@ -80,7 +80,7 @@
     </article>
     {% endblock %}
 
-    {% set series = bundle.get_collection('series') %}
+    {% set series = plugins.collections.get_collection(bundle, 'series') %}
     {% if series %}
         <div>
             <h4>Part of a series "{{ title(series) }}"</h4>
