--- a/templates/tag.j2
+++ b/templates/tag.j2
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-    {% for bundle in bundle.get_bundles_by("title", "desc", status="published") %}
+    {% for bundle in bundle.get_bundles_by("publish_time", "desc", status="published") %}
         {{ article_tease(bundle, 255) }}
     {% endfor %}
 {% endblock %}
