sans-serif font please

--- a/static/css/site.less
+++ b/static/css/site.less
@@ -15,6 +15,7 @@
 body {
     .gradient(@background, @backgroundFrom, @background, left top, right top);
     color: @color;
+    font-family: sans-serif;
 
     .glyph {
         font-size: inherit;
