--- a/templates/site_base.j2
+++ b/templates/site_base.j2
@@ -38,8 +38,13 @@
     <link rel="stylesheet" type="text/css" href="/css/foundation-icons-general.css">
     <link rel="stylesheet/less" type="text/css" href="/css/site.less">
     <link rel="shortcut icon" href="/favicon.ico" />
-    <script type="text/javascript" src="/js/less-1.3.0.min.js"></script>
     <link href="http://{{ config.domain }}/atom.xml" type="application/atom+xml" rel="alternate" title="www.ironfroggy.com ATOM feed" />
+
+    {% for page_stylesheet in bundle.meta.stylesheets %}
+        <link rel="stylesheet/less" type="text/css" href="{{ page_stylesheet }}">
+    {% endfor %}
+
+    <script type="text/javascript" src="/js/less-1.3.0.min.js"></script>
 {% endblock %}
 
 {% block header %}
@@ -71,6 +76,16 @@
     </div>
 
     <div class=left-column>
+
+        <h3><a href="{{ engine.get_bundle(key="programming").url() }}">Calvin is a Programmer <span class="glyph general">u</span></a></h3>
+        <p>who writes about and works with Python, Django, Javascript, NodeJS, and HTML5</p>
+
+        <h3><a href="{{ engine.get_bundle(key="writing").url() }}">... a Writer <span class="glyph general">u</span></a></h3>
+        <p>who is rekindling a love of reading and writing, and working towards publishing his first short stories and novel</p>
+
+        <h3><a href="{{ engine.get_bundle(key="personal").url() }}">... a Person <span class="glyph general">u</span></a></h3>
+        <p>who is passionate about feminism, queer activism, veganism, and driving redistributing wealth</p>
+        
         {% if bundle.key != "index" %}
             <h3>Posts</h3>
             <ul class=list>
