--- a/templates/index.j2
+++ b/templates/index.j2
@@ -18,11 +18,11 @@
     </ul>
     <h3><a href="/i-am">Who am I?</a></h3>
     <ul class=list>
-        <li>Python, Django, and Javascript developer for <a href="http://caktusgroup.com/">Caktus Group</a>
-        <li>Vegan atheist libral feminist advocate for a better world
-        <li>Father and husband
-        <li>Writer and once-artist
-        <li>Transhumanist
+        <li>Developer by love, Tester by trade for <a href="http://redhat.com/">Red Hat</a>
+        <li>Vegan atheist commie feminist for a maybe-doomed world
+        <li>Partner and Parent
+        <li>Some times writer and artist
+        <li>Enjoyer of TV and games
     </ul>
 {% endblock %}
 
