--- a/templates/site_base.j2
+++ b/templates/site_base.j2
@@ -78,14 +78,14 @@
     <div class=left-column>
 
         <h3><a href="{{ engine.get_bundle(key="programming").url() }}">Calvin is a Programmer <span class="glyph general">u</span></a></h3>
-        <p>who writes about and works with Python, Django, Javascript, NodeJS, and HTML5</p>
+        <p>who writes about and works with Python, C#, Javascript, Testing software, and Making games</p>
 
         <!--
         <h3><a href="{{ engine.get_bundle(key="writing").url() }}">... a Writer <span class="glyph general">u</span></a></h3>
-        <p>who is rekindling a love of reading and writing, and working towards publishing his first short stories and novel</p>
+        <p>who is loves reading and writing, and unfinished novels</p>
 
         <h3><a href="{{ engine.get_bundle(key="personal").url() }}">... a Person <span class="glyph general">u</span></a></h3>
-        <p>who is passionate about feminism, queer activism, veganism, and driving redistributing wealth</p>
+        <p>who is passionate about animal cruelty, feminism, queer activism, veganism, and redistributing wealth</p>
         -->
         
         {% if bundle.key != "index" %}
