--- a/static/css/site.less
+++ b/static/css/site.less
@@ -264,3 +264,7 @@ li.feed {
     list-style-image: url("/images/rss_icon_small.png");
     margin-left: 30px;
 }
+
+.inline-image {
+    max-height: 50vh;
+}
