Committing deploy version at 2019-11-27 19:56

--- a/templates/index.j2
+++ b/templates/index.j2
@@ -16,7 +16,7 @@
         <li><a href="http://ironfroggy-reads.tumblr.com/">Ironfroggy Reads Things</a>
             <em class=list-extra>Things I read, respond to, and/or find interesting online</em>
     </ul>
-    <h3><a href="/i-am">Who am I?</a></h3>
+    <h3><a href="{{ engine.get_bundle(key="i-am").url() }}">Who am I?</a></h3>
     <ul class=list>
         <li>Developer by love, Tester by trade for <a href="http://redhat.com/">Red Hat</a>
         <li>Vegan atheist commie feminist for a maybe-doomed world
