Committing deploy version at 2020-04-12 10:26

--- a/static/css/programming.less
+++ b/static/css/programming.less
@@ -3,6 +3,6 @@
 @background: #eee;
 @backgroundFrom: #ccc;
 
-body {
-    .gradient(@background, @backgroundFrom, @background, left top, right top);
-}
+// body {
+//     .gradient(@background, @backgroundFrom, @background, left top, right top);
+// }
