Started import of previous blog; imported 2006-01 posts.
- Added 2006/01/ posts
- Added archive collections for year and month indices

--- a/templates/post.j2
+++ b/templates/post.j2
@@ -47,6 +47,13 @@
         {% endfor %}
         </ul>
     {% endfor %}
+    {% if bundle.meta['collections'].get('month') %}
+        <ul class=list>
+        {% for month in bundle.meta['collections'].get('month', {}) %}
+            <li><a href="{{ month.url() }}">{{ month.value }} Archive</a></li>
+        {% endfor %}
+        </ul>
+    {% endif %}
     {% if bundle.meta['collections'].get('tags') %}
         <h3>Tags</h3>
         <ul class=list>
