--- a/templates/site_base.j2
+++ b/templates/site_base.j2
@@ -27,7 +27,7 @@
             {% endif %}
         </h4>
         {% if bundle.content %}
-            {{ bundle.content|truncateHTML(bundle.meta.tease_length or tease_length)|safe }}
+            {{ bundle.content|truncateHTML(bundle.meta.tease_length or tease_length)|safe }}...
         {% endif %}
         <a class="peak read-more" href="{{ bundle.url() }}">more</a>
     </article>
